--- a/sass/partials/_media-queries.scss
+++ b/sass/partials/_media-queries.scss
@@ -197,6 +197,12 @@
     }
   }
 
+  #skills {
+    p {
+      margin-top: 0;
+    }
+  }
+
   footer {
     padding: 0 20px 0 0;
 
